// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render with default props 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  text-align: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  overflow: hidden;
  color: #005AEE;
  background: #E6EFFD;
}

.c0 .c1 {
  line-height: 40px;
  font-size: 16px;
  font-weight: normal;
}

.c0 img {
  width: 40px;
  height: 40px;
  object-fit: cover;
  border: 0.1rem solid #DFE4E9;
  box-sizing: border-box;
  border-radius: 50%;
}

.c0 img:hover {
  box-shadow: 0 0.4rem 0.8rem #607890;
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem #005aee;
  background: #1A6BF0;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1 c2"
    >
      M
    </strong>
  </div>
</div>
`;

exports[`Avatar component should render with size 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  text-align: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  overflow: hidden;
  color: #005AEE;
  background: #E6EFFD;
}

.c0 .c1 {
  line-height: 40px;
  font-size: 16px;
  font-weight: normal;
}

.c0 img {
  width: 40px;
  height: 40px;
  object-fit: cover;
  border: 0.1rem solid #DFE4E9;
  box-sizing: border-box;
  border-radius: 50%;
}

.c0 img:hover {
  box-shadow: 0 0.4rem 0.8rem #607890;
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem #005aee;
  background: #1A6BF0;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1 c2"
    >
      M
    </strong>
  </div>
</div>
`;

exports[`Avatar component should render with size and image 1`] = `
.c0 {
  display: inline-block;
  text-align: center;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  overflow: hidden;
  color: #005AEE;
  background: #E6EFFD;
}

.c0 .sc-AykKC {
  line-height: 48px;
  font-size: 20px;
  font-weight: normal;
}

.c0 img {
  width: 48px;
  height: 48px;
  object-fit: cover;
  border: 0.1rem solid #DFE4E9;
  box-sizing: border-box;
  border-radius: 50%;
}

.c0 img:hover {
  box-shadow: 0 0.4rem 0.8rem #607890;
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem #607890;
  background: #1A6BF0;
}

.c0:hover .sc-AykKC {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <img
      src="http://dummurl"
    />
  </div>
</div>
`;
